--- a/DataConsumer/src/main/resources/application.properties
+++ b/DataConsumer/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=DataConsumer
+
+spring.application.name=Kafka
+server.port=8084
+
+
+kafka.serverconfig=localhost:9092
+kafka.topic=equity_market_data
+
+redis.port=6379
